# doppelbanger

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  proposal.yml
.github/workflows/: ci.yml
corpus/albumdb/: manifest.json
db/init/: 001_schema.sql
docs/: AGENT_WORKFLOW.md  AUDITION.md  DECISIONS.md  ENGINEERING_SPEC.md  PLUGIN_ARCHITECTURE.md  PRD.md  VALIDATION.md
include/: doppelbanger_dsp.h
scripts/: fetch_albumdb.sh  test_native_ffi.sh
src/: analysis.rs  api.rs  audio.rs  benchmark.rs  dsp.rs  ffi.rs  lib.rs  main.rs  plan.rs  render.rs  worker.rs
src/ffi/: process.rs
tests/: analysis_contract.rs  api_integration.rs  audio_reader.rs  benchmark_contract.rs  cli_contract.rs  cli_prepare.rs  corpus_manifest.rs  corpus_prepare.rs  decision_docs.rs  docs_current.rs  dsp_contract.rs  ffi_contract.rs  ffi_process.rs  mastering_pipeline.rs  request_contract.rs  schema_contract.rs
tests/fixtures/: README.md
tests/native/: c11_smoke.c  cpp17_smoke.cpp  native_abi_smoke.h
